70: Fixed page-breaks on draw printouts

--- a/resources/html/print.css
+++ b/resources/html/print.css
@@ -1,4 +1,10 @@
+/*
 h1 {
+    page-break-before:always;
+}
+*/
+
+span.break {
     page-break-before:always;
 }
 
